src/objects/OneStopSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Approval_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>1 to 5. high to low</description>
        <label>Priority</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <inlineHelpText>Insert in hours</inlineHelpText>
        <label>SLA</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OneStopSettings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>Approval_Needed__c</columns>
        <columns>Category__c</columns>
        <columns>Priority__c</columns>
        <columns>SLA__c</columns>
        <columns>Sub_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>